--- a/core/connection/ble/conn_ble.gni
+++ b/core/connection/ble/conn_ble.gni
@@ -66,12 +66,13 @@ if (dsoftbus_feature_conn_ble == false) {
     ble_connection_src += [ "$dsoftbus_root_path/core/connection/ble/src/softbus_conn_ble_direct_virtual.c" ]
   }
   if (enhanced_conn_coc == true) {
-    ble_connection_src += [ 
+    ble_connection_src += [
       "$dsoftbus_root_path/dsoftbus_enhance/core/connection/coc/src/ble_protocol_interface_factory.c",
       "$dsoftbus_root_path/dsoftbus_enhance/core/connection/coc/src/softbus_adapter_coc.c",
       "$dsoftbus_root_path/dsoftbus_enhance/core/connection/coc/src/softbus_conn_ble_coc.c",
     ]
-    ble_connection_inc += [ "$dsoftbus_root_path/dsoftbus_enhance/core/connection/coc/include" ]
+    ble_connection_inc +=
+        [ "$dsoftbus_root_path/dsoftbus_enhance/core/connection/coc/include" ]
   } else {
     ble_connection_src += [ "$dsoftbus_root_path/core/connection/ble/src/ble_protocol_interface_factory.c" ]
   }
