--- a/core/frame/standard/init/src/softbus_server.cfg
+++ b/core/frame/standard/init/src/softbus_server.cfg
@@ -10,7 +10,7 @@
             "name" : "softbus_server",
             "path" : ["/system/bin/sa_main", "/system/profile/softbus_server.json"],
             "uid" : "dsoftbus",
-            "gid" : ["dsoftbus", "system", "shell"],
+            "gid" : ["dsoftbus", "system", "shell", "netsys_socket"],
             "permission" : ["ohos.permission.PERMISSION_USED_STATS", "ohos.permission.GET_SENSITIVE_PERMISSIONS"],
             "permission_acls" : ["ohos.permission.GET_SENSITIVE_PERMISSIONS"],
             "critical" : [0, 10, 10]
