--- a/tests/core/transmission/common/mock/mock.gni
+++ b/tests/core/transmission/common/mock/mock.gni
@@ -19,10 +19,5 @@ trans_comm_mock_src = [
   "$trans_comm_mock_path/src/trans_conn_mock.cpp",
   "$trans_comm_mock_path/src/trans_auth_mock.cpp",
 ]
-trans_comm_mock_inc = [
-  "$trans_comm_mock_path/include",
-  "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
-  "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/include",
-  "$dsoftbus_root_path/core/bus_center/lnn/net_buscenter/include",
-]
+trans_comm_mock_inc = [ "$trans_comm_mock_path/include" ]
 trans_comm_mock_deps = []
