fix:add RECEIVER_STARTUP_COMPLETED permission
Signed-off-by: fangdong7 <fangdong7@huawei.com>

--- a/core/frame/standard/init/src/softbus_server.cfg
+++ b/core/frame/standard/init/src/softbus_server.cfg
@@ -11,7 +11,11 @@
             "path" : ["/system/bin/sa_main", "/system/profile/softbus_server.json"],
             "uid" : "dsoftbus",
             "gid" : ["dsoftbus", "system", "shell", "netsys_socket"],
-            "permission" : ["ohos.permission.PERMISSION_USED_STATS", "ohos.permission.GET_SENSITIVE_PERMISSIONS"],
+            "permission" : [
+                "ohos.permission.PERMISSION_USED_STATS",
+                "ohos.permission.GET_SENSITIVE_PERMISSIONS",
+                "ohos.permission.RECEIVER_STARTUP_COMPLETED"
+            ],
             "permission_acls" : ["ohos.permission.GET_SENSITIVE_PERMISSIONS"],
             "critical" : [0, 10, 10]
         }
