--- a/tests/core/bus_center/lnn/BUILD.gn
+++ b/tests/core/bus_center/lnn/BUILD.gn
@@ -57,6 +57,7 @@ bus_center_unittest_dirs = [
   "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/decision_db/include",
   "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/include",
   "$dsoftbus_root_path/tests/core/bus_center/lnn/net_builder/include",
+  "$dsoftbus_root_path/core/authentication/include",
 ]
 
 bus_center_unittest_deps = [
