Exchange networkId instead of udid when exchanging the first packet of data.  Signed-off-by: y30033032 <yuanmeng36@huawei.com>

--- a/tests/core/authentication/fuzztest/unpackauthdata_fuzzer/BUILD.gn
+++ b/tests/core/authentication/fuzztest/unpackauthdata_fuzzer/BUILD.gn
@@ -32,6 +32,7 @@ ohos_fuzztest("UnpackAuthDataFuzzTest") {
     "$dsoftbus_root_path/interfaces/kits/bus_center",
     "$dsoftbus_root_path/interfaces/kits/common",
     "$dsoftbus_root_path/tests/sdk/common/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_builder/include",
   ]
 
   cflags = [
