--- a/core/connection/ble/conn_ble.gni
+++ b/core/connection/ble/conn_ble.gni
@@ -34,6 +34,7 @@ ble_connection_deps = []
 if (dsoftbus_feature_conn_ble == false) {
   ble_connection_src = [
     "$dsoftbus_root_path/core/connection/ble/src/softbus_conn_ble_direct_virtual.c",
+    "$dsoftbus_root_path/core/connection/ble/src/softbus_conn_ble_direct_pipeline_virtual.c",
     "$dsoftbus_root_path/core/connection/ble/src/softbus_conn_ble_virtual.c",
   ]
   ble_connection_inc = [
@@ -68,7 +69,10 @@ if (dsoftbus_feature_conn_ble == false) {
     ble_connection_inc +=
         [ "$dsoftbus_root_path/dsoftbus_enhance/core/connection/ble/include" ]
   } else {
-    ble_connection_src += [ "$dsoftbus_root_path/core/connection/ble/src/softbus_conn_ble_direct_virtual.c" ]
+    ble_connection_src += [
+      "$dsoftbus_root_path/core/connection/ble/src/softbus_conn_ble_direct_virtual.c",
+      "$dsoftbus_root_path/core/connection/ble/src/softbus_conn_ble_direct_pipeline_virtual.c",
+    ]
   }
   if (enhanced_conn_coc == true) {
     ble_connection_src += [
