[Bug]:Fix the issue that discovery failed on ble devices
Signed-off-by: zhang <zhangfengxi@huawei.com>

--- a/core/frame/standard/init/src/softbus_server_musl.cfg
+++ b/core/frame/standard/init/src/softbus_server_musl.cfg
@@ -15,7 +15,8 @@
             "permission" : [
                 "ohos.permission.PERMISSION_USED_STATS",
                 "ohos.permission.GET_SENSITIVE_PERMISSIONS",
-                "ohos.permission.RECEIVER_STARTUP_COMPLETED"
+                "ohos.permission.RECEIVER_STARTUP_COMPLETED",
+                "ohos.permission.MANAGE_LOCAL_ACCOUNTS"
             ],
             "permission_acls" : ["ohos.permission.GET_SENSITIVE_PERMISSIONS"],
             "critical" : [0, 10, 10]
