--- a/core/connection/conn.gni
+++ b/core/connection/conn.gni
@@ -23,8 +23,9 @@ conn_manager_src = ble_connection_src + br_connection_src + tcp_connection_src +
                    wifi_direct_connection_src
 conn_manager_inc = ble_connection_inc + br_connection_inc + tcp_connection_inc +
                    wifi_direct_connection_inc
-conn_manager_deps = ble_connection_deps + br_connection_deps
-conn_manager_external_deps = wifi_direct_connection_external_deps
+conn_compatible_external_deps = ble_compatible_external_deps
+conn_manager_external_deps =
+    wifi_direct_connection_external_deps + ble_connection_external_deps
 conn_manager_src +=
     [ "$dsoftbus_root_path/core/connection/manager/softbus_conn_manager.c" ]
 conn_manager_inc += [
