--- a/tests/core/connection/p2p/BUILD.gn
+++ b/tests/core/connection/p2p/BUILD.gn
@@ -19,13 +19,13 @@ module_output_path = "dsoftbus/connection"
 ohos_unittest("ConnectionP2pTest") {
   module_out_path = module_output_path
 
-  if (dsoftbus_feature_conn_br == true) {
+  if (support_bluetooth && dsoftbus_feature_conn_br) {
     defines = [ "connection_enable_br_test" ]
   } else {
     defines = []
   }
 
-  if (dsoftbus_feature_conn_ble == true) {
+  if (support_bluetooth && dsoftbus_feature_conn_ble) {
     defines += [ "connection_enable_ble_test" ]
   }
 
@@ -79,13 +79,13 @@ ohos_unittest("ConnectionP2pTest") {
 ohos_unittest("P2pManagerTest") {
   module_out_path = module_output_path
 
-  if (dsoftbus_feature_conn_br == true) {
+  if (support_bluetooth && dsoftbus_feature_conn_br) {
     defines = [ "connection_enable_br_test" ]
   } else {
     defines = []
   }
 
-  if (dsoftbus_feature_conn_ble == true) {
+  if (support_bluetooth && dsoftbus_feature_conn_ble) {
     defines += [ "connection_enable_ble_test" ]
   }
 
@@ -141,13 +141,13 @@ ohos_unittest("P2pManagerTest") {
 ohos_unittest("P2pDeviceTest") {
   module_out_path = module_output_path
 
-  if (dsoftbus_feature_conn_br == true) {
+  if (support_bluetooth && dsoftbus_feature_conn_br) {
     defines = [ "connection_enable_br_test" ]
   } else {
     defines = []
   }
 
-  if (dsoftbus_feature_conn_ble == true) {
+  if (support_bluetooth && dsoftbus_feature_conn_ble) {
     defines += [ "connection_enable_ble_test" ]
   }
 
