--- a/tests/core/discovery/BUILD.gn
+++ b/tests/core/discovery/BUILD.gn
@@ -26,7 +26,7 @@ has_enhance_test = exec_script("$dsoftbus_root_path/check_sub_module.py",
 group("unittest") {
   testonly = true
   deps = [ "manager/unittest:unittest" ]
-  if (dsoftbus_feature_disc_ble) {
+  if (support_bluetooth && dsoftbus_feature_disc_ble) {
     deps += [
       "ble/dispatcher:unittest",
       "ble/softbus_ble_mock:unittest",
