--- a/core/bus_center/lnn/net_buscenter/net_manager.gni
+++ b/core/bus_center/lnn/net_buscenter/net_manager.gni
@@ -26,7 +26,8 @@ bus_center_net_mgr_inc = [
   "$dsoftbus_root_path/core/bus_center/lnn/net_buscenter/include",
   "$dsoftbus_root_path/core/adapter/bus_center/include",
 ]
-if (dsoftbus_feature_conn_br || dsoftbus_feature_conn_ble) {
+if (support_bluetooth &&
+    (dsoftbus_feature_conn_br || dsoftbus_feature_conn_ble)) {
   bus_center_net_mgr_src += [ "$dsoftbus_root_path/core/bus_center/lnn/net_buscenter/src/lnn_bt_network_impl.c" ]
 }
 bus_center_net_mgr_deps = []
