Fix fuzzy use case failure and add coverage https://gitee.com/openharmony/communication_dsoftbus/issues/I7O7QG Signed-off-by: l30044017 <liuqiang254@huawei.com>

--- a/tests/adapter/fuzztest/BUILD.gn
+++ b/tests/adapter/fuzztest/BUILD.gn
@@ -17,5 +17,6 @@ group("fuzztest") {
     "softbusadapterhisysevent_fuzzer:fuzztest",
     "softbusadapterrange_fuzzer:fuzztest",
     "softbusdecryptdata_fuzzer:SoftBusDecryptDataFuzzTest",
+    "softbussocketrecv_fuzzer:fuzztest",
   ]
 }
