--- a/tests/core/transmission/fuzztest/BUILD.gn
+++ b/tests/core/transmission/fuzztest/BUILD.gn
@@ -16,5 +16,6 @@ group("fuzztest") {
   deps = [
     "softbusproxychannellistener_fuzzer:fuzztest",
     "softbusproxychannelnetwork_fuzzer:fuzztest",
+    "transproxyonmessagereceived_fuzzer:fuzztest",
   ]
 }
