--- a/tests/core/frame/BUILD.gn
+++ b/tests/core/frame/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -31,8 +31,13 @@ ohos_executable("softbus_test") {
   if (is_standard_system) {
     defines = [ "STANDARD_SYSTEM_ENABLE" ]
 
-    deps = [ "$dsoftbus_root_path/core/frame/$os_type/client:softbus_client" ]
+    deps = [ "$dsoftbus_root_path/sdk:softbus_client" ]
     part_name = "softbus_L2"
   }
   subsystem_name = "communication"
+}
+
+group("fuzztest") {
+  testonly = true
+  deps = [ "fuzztest:fuzztest" ]
 }
